# AI-Python-

./: .env  README.md  gui.py  main.py  pyproject.toml
book_db/: chroma.sqlite3
